--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-plus": "^2.2.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
@@ -38,7 +39,9 @@
     "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
     "prettier": "^2.2.1",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "unplugin-auto-import": "^0.7.1",
+    "unplugin-vue-components": "^0.19.5"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
