--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "commit": "cz"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "element-plus": "^2.2.0",
+    "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
