--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "element-plus": "^2.2.0",
     "normalize.css": "^8.0.1",
+    "pinia": "^2.0.14",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
