--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
+    "@kangc/v-md-editor": "^2.3.15",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.2",
