--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "prettier": "prettier --write .",
+    "commit": "cz",
     "prepare": "husky install",
-    "commit": "cz"
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
@@ -45,9 +45,16 @@
     "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
     "prettier": "^2.2.1",
+    "style-resources-loader": "^1.4.1",
     "typescript": "~4.1.5",
     "unplugin-auto-import": "^0.7.1",
-    "unplugin-vue-components": "^0.19.5"
+    "unplugin-vue-components": "^0.19.5",
+    "vue-cli-plugin-style-resources-loader": "~0.1.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
@@ -57,10 +64,5 @@
       "vue-cli-service lint",
       "git add"
     ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   }
 }
