refactor(main): 使用unplugin-auto-import和unplugin-vue-components完成自动导入组件以及vue的api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,9 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx",
+    "./components.d.ts",
+    "./auto-imports.d.ts"
   ],
   "exclude": ["node_modules"]
 }
