--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.0.0",
+    "eslint-plugin-vue": "^8.4.0",
     "husky": "^7.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
@@ -49,7 +49,8 @@
     "typescript": "~4.1.5",
     "unplugin-auto-import": "^0.7.1",
     "unplugin-vue-components": "^0.19.5",
-    "vue-cli-plugin-style-resources-loader": "~0.1.5"
+    "vue-cli-plugin-style-resources-loader": "~0.1.5",
+    "vue-global-api": "^0.4.1"
   },
   "config": {
     "commitizen": {
