--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-plus": "^2.2.0",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.14",
+    "qiniu-js": "^3.4.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
