--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "dayjs": "^1.11.2",
+    "default-passive-events": "^2.0.0",
     "echarts": "^5.3.3",
     "element-plus": "^2.2.0",
     "normalize.css": "^8.0.1",
